Update env variable

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://postgres:example@localhost:5432/dev-db" # Development Postgres DB 
+POSTGRES_URL="postgresql://postgres:example@localhost:5432/dev-db" # Development Postgres DB 
