--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 POSTGRES_URL="postgresql://postgres:example@localhost:5432/dev-db" # Development Postgres DB 
+DOCKER_POSTGRES_URL="postgresql://postgres:example@db:5432/dev-db" # For Docker Compose with multiple containers
